@@ -1,3 +1,9 @@
+drkns 06.08.2016 14:56:47 +0200 - build 4751
+
+1. Уточнение обработки некорректных hex-строк в диалогах.
+
+2. В одном из предыдущих билдов погнулась диагностика исключений.
+
 drkns 04.08.2016 22:16:44 +0200 - build 4750
 
 1. Уточнение 4748.
